
=======================================================
            WanT code:  Log of Changes 
=======================================================

16 Apr 2009      Changes in test04 because the usage of dipole.x in QE
                 is changed. (AF)

13 Apr 2009      Orthogonalization of ovp added to cmplx_bands.f90 to 
                 improve numerical accuracy. (AF)

08 Apr 2009      Updates in the script lib to run tests. (AF)

31 Mar 2009      Bug fixed in dealing with CRYSTAL06 datafiles: wan_eig are
                 no longer requested to be in .space file. (AF)

27 Mar 2009      Bug fixed in configure.ac. (AF) 

16 Mar 2009      Bug fixed in compilation without __ETSF_IO support. (AF)

13 Mar 2009      Bug fixed in kpt generation algorithm when interpolating bands
                 (one point was missing). Bug fixed in io_open_dftdata routine
                 when using the crystal interface. (AF)

21 Feb 2009      Bug fixed in the documentation of kpoints.f90 (courtesy of
                 Y.P.Wang). (AF)

18 Feb 2009      kpt sorting (and symmetrization) implemented in blc2wan.f90 .
                 (AF and Tonatiuh Rangel)

17 Feb 2009      Bugs fixed in conductor.f90: dos was not computed correctly;
                 conductance array was going out-of-bounds. Bug fixed when
                 reading efermi from input file. Bug fixed when trying to
                 get the .ham fmt in the case of wannier90 files (failure of
                 iotk getting tags). (AF)
                 wfk2etsf.x utility (abinit binary to etsf converter) added to
                 WanT. (Tonatiuh Rangel)

13 Feb 2009      Bug in autoconf found. output of ETSF_IO_LINE in configure.msg
                 removed to workaround the bug. Support of Wannier90 datafiles
                 added, courtesy of Tonatiuh Rangel; related tests added in
                 test11. (AF)
		 Bug fixed in atomic.f90. (Tonatiuh Rangel)
